# nicegui-book_list

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
book_list/: index.html
docs/: book_list.md  index.md
search/: search_index.json
src/nicegui_book_list/: __init__.py  __main__.py  main.py  models.py  ui.py
src/tests/: test_ui.py
